--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title><Visiting-card></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -15,15 +15,16 @@
 </head>
 <body>
     <div class="profile-card">
-<img src="" alt="">
-<div class="name">Fogasné Nagy Beáta</div>
-<div class="job">Közgazdász, weboldalkészítő</div>
-<div class="description">Szakmám szerint közgazdász vagyok. Mivel szeretem a kreatív feladatokat, ezért wordpress weboldalak készítésével is foglalkozom. Szeretném teljesen átlátni a weboldalak felépítését, ezért jelenleg programozást tanulok.</div>
-<div class="links">
+        <div class="profile-image"><img src="assets/Profile-picture.jpg" alt="Profile-picture">
+        </div>
+       <div class="name">Fogasné Nagy Beáta</div>
+       <div class="job">Közgazdász, weboldalkészítő</div>
+       <div class="description">Szakmám szerint közgazdász vagyok. Mivel szeretem a kreatív feladatokat, ezért wordpress weboldalak készítésével is foglalkozom. Szeretném teljesen átlátni a weboldalak felépítését, ezért jelenleg programozást tanulok.</div>
+       <div class="links">
     <ul>
         <li><a href="https://www.linkedin.com/in/be%C3%A1ta-fogasn%C3%A9-nagy-a28768157/" target="_blank" title="Linkedin"><i class="fa fa-2x fa-linkedin"></i></a></li>
         <li><a href="https://facebook.com/beata.fogasnenagy" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook-square"></i></a></li>
-        <li><a href="https://www.instagram.com/fogasnebea/" target="_blank" title="Twitter"><i class="fa fa-2x fa-instagram"></i></a></li>
+        <li><a href="https://www.instagram.com/fogasnebea/" target="_blank" title="Instagram"><i class="fa fa-2x fa-instagram"></i></a></li>
       </ul>
     </div>
     </div>
