--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="HU">
+<html lang="EN">
 <head>
   <meta charset="utf-8">
   <title><Visiting-card></title>
@@ -17,16 +17,16 @@
     <div class="profile-card">
         <div class="profile-image"><img src="assets/Profile-picture.jpg" alt="Profile-picture">
         </div>
-       <div class="name">Fogasné Nagy Beáta</div>
-       <div class="job">Közgazdász, weboldalkészítő</div>
-       <div class="description">Szakmám szerint közgazdász vagyok. Mivel szeretem a kreatív feladatokat, ezért wordpress weboldalak készítésével is foglalkozom. Szeretném teljesen átlátni a weboldalak felépítését, ezért jelenleg programozást tanulok.</div>
+       <div class="name">Beáta Fogasné Nagy</div>
+       <div class="job">Economist, webpage stylist</div>
+       <div class="description">I'm an economist by profession.As I like creative tasks, I am making webpages in Wordpress.I'd like to understand the overall structure of websites so I'm learning programming nowadays.</div>
        <div class="links">
     <ul>
         <li><a href="https://www.linkedin.com/in/be%C3%A1ta-fogasn%C3%A9-nagy-a28768157/" target="_blank" title="Linkedin"><i class="fa fa-2x fa-linkedin"></i></a></li>
         <li><a href="https://facebook.com/beata.fogasnenagy" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook-square"></i></a></li>
         <li><a href="https://www.instagram.com/fogasnebea/" target="_blank" title="Instagram"><i class="fa fa-2x fa-instagram"></i></a></li>
       </ul>
-    <a href="index2.html" title="english">EN</a>
+      <a href="index.html" title="magyar">HU</a>
     </div>
     </div>
 </body> 
